# pathfinder

./: Cargo.toml  bench_report.sh  goose.md
.github/workflows/: build.yml
benchy_stuff/: bench_report.sh
crates/load-test/: Cargo.toml
crates/load-test/src/: main.rs
crates/pathfinder/: Cargo.toml
crates/pathfinder/examples/: dump_contract_storage.rs  merkle_global_tree.rs  merkle_storage_tree.rs
crates/pathfinder/fixtures/blocks/: block_156000.json  block_73653.json
crates/pathfinder/fuzz/: Cargo.toml
crates/pathfinder/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
crates/pathfinder/resources/: block_186109.json  block_hash.py
crates/pathfinder/src/: ethereum.rs  rpc.rs  state.rs  storage.rs
crates/pathfinder/src/rpc/: api.rs  types.rs
crates/pathfinder/src/sequencer/: reply.rs
crates/pathfinder/src/state/: block_hash.rs  merkle_node.rs  merkle_tree.rs  state_tree.rs  sync.rs
crates/pathfinder/src/state/sync/: l2.rs
crates/pathfinder/src/storage/: state.rs
crates/stark_hash/fuzz/: Cargo.toml
crates/stark_hash/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/stark_hash/src/: hash.rs
crates/tree_tool/: Cargo.toml  README.md
crates/tree_tool/src/: main.rs
py/: requirements-dev.in  requirements-dev.txt
py/src/: call.py  compute_block_hash.py  generate_test_global_tree.py  generate_test_storage_tree.py  generate_tree.py  test_generate_tree.py
reports/: 1.html  2.html  2_wal.html  3.html  4.html
