[package]
name = "load-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.16.0"
rand = "0.8.5"
pathfinder = { path = "../pathfinder" }
pedersen = { path = "../pedersen" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["arbitrary_precision", "raw_value"] }
tokio = "1.11.0"
